<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">My Time</string>

    <string name="action_settings">Settings</string>
    <string name="checkInButton">Check In</string>
    <string name="defaultCheckInTimeText">checkInTimes</string>
    <string name="checkInDateHeadingText">checkInDateHeading</string>
    <string name="dateTotalHeading">dateTotalHeading</string>
    <string name="missingCheckInText">Missing Check In</string>
    <string name="duplicateCheckInMessage">Already checked in at %1$s</string>
    <string name="checkInListDescription">List of check-in times grouped by date</string>
    <string name="timePickerDescription">Select check-in time</string>
    <string name="checkInButtonDescription">Save check-in at selected time</string>
    <string name="checkInDateDescription">Check-in date</string>
    <string name="dateTotalDescription">Total hours worked</string>
    <string name="checkInTimesDescription">Check-in times for this date</string>

</resources>
