<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    tools:context="com.harringa.mytime.MyTimeMainActivity">

    <ListView
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="1"
            android:id="@+id/checkInListView"
            android:contentDescription="@string/checkInListDescription"/>

    <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TimePicker
                android:layout_width="wrap_content"
                android:layout_height="120dp"
                android:id="@+id/timePicker"
                android:contentDescription="@string/timePickerDescription"/>
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checkInButton"
                android:id="@+id/checkIn"
                android:contentDescription="@string/checkInButtonDescription"
                android:layout_gravity="center|end"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                />

    </FrameLayout>



</LinearLayout>
