<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical"
              android:id="@+id/checkInListView"
              android:paddingStart="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_vertical_margin"
              android:paddingEnd="@dimen/activity_vertical_margin"
              android:paddingRight="@dimen/activity_vertical_margin"
              android:paddingTop="@dimen/activity_horizontal_margin"
              android:paddingBottom="@dimen/activity_horizontal_margin"
        >

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
            >
        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/checkInDateHeadingText"
                android:id="@+id/checkInDate"
                android:layout_weight="1"/>

        <TextView
                android:gravity="end"
                android:layout_gravity="end"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/dateTotalHeading"
                android:id="@+id/dateTotal"
                android:layout_weight="1"/>
    </LinearLayout>


    <TextView
            android:id="@+id/checkInTimes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/defaultCheckInTimeText"/>

</LinearLayout>